# npanel

./: .gitattributes  .gitignore  ABUSE_EDGE_CASE_TESTING.md  API_ROUTING_FIX.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTH_FLOW_AUDIT.md  BLOCKING_ISSUE_RESOLUTION_COMPLETE.md  BUILD.md  BUILD_REPORT.md  CENTRALIZED_LOGGING_PLAN.md  CERTIFICATE_POLICY.md  CLEANUP_REPORT.md  COMMIT_CHECKLIST.md  COMPLETE_PROJECT_SUMMARY.md  COMPREHENSIVE_PROJECT_STATUS.md  CROSS_DISTRO_VERIFICATION.md  DATABASE_MIGRATION_SCHEMA.md  DEBUG_INSTALLER.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMMIT_GUIDE.md  DEPLOYMENT_HARDENING_COMPLETE.md  DEPLOYMENT_PLAYBOOK.md  DEPLOYMENT_READY_EXECUTIVE_SUMMARY.md  DEPLOYMENT_REQUIREMENTS_COMPLETE.md  DEPLOYMENT_ROLLBACK_PLAN.md  DEPLOYMENT_UBUNTU_FRESH.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DIAGNOSTIC_SYSTEM_READY.md  ENVIRONMENT_CONFIGURATION_GUIDE.md  ENV_TEMPLATE_VERIFICATION.md  FINAL_DELIVERY_STATUS.md  FOUNDATION_COMPLETE.md  FRONTEND_STARTUP_FIX.md  GRACEFUL_SHUTDOWN_VERIFICATION.md  IMPERSONATION_SECURITY_REVIEW.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION_FIX_GUIDE.md  INSTALLER_ARCHITECTURE.md  (+131 more)
panel/backend/: alembic.ini  pyproject.toml
panel/backend/alembic/: env.py
panel/backend/alembic/versions/: 0001_initial.py  0002_dns_zones.py  0003_mail_tables.py  0004_migration_jobs.py
panel/backend/app/: main.py
panel/backend/app/audit/: events.py
panel/backend/app/auth/: middleware.py  sessions.py
panel/backend/app/config/: settings.py
panel/backend/app/db/: init.py  models.py  session.py
panel/backend/app/dns/: powerdns.py  (+1 more)
(+251 files in other folders)
